--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-jwt": "^1.2.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
