--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "reactjs-social-login": "^2.6.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1",
     "web-vitals": "^2.1.4"
